# babelbit_subnet

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-local-db.yml  docker-compose.yml  env.example  manual_db_bb_schema.sql  min_compute.yml  prometheus.yml  pyproject.toml
.github/workflows/: notify-commit.yml  notify-pr.yml
babelbit/: __init__.py
babelbit/chute_template/: chute.py.j2  load.py  predict.py  schemas.py  setup.py  test.py
babelbit/cli/: push.py  register_axon.py  runner.py  signer_api.py  subtensor_gateway.py  validate.py
babelbit/dev_scripts/: README.md  dialogue-score.schema.json  phrase_completion-non-json.py  phrase_completion.py  requirements.txt  score_dialogue-explanation.md  score_dialogue-non-json.py  (+1 more)
images/: architecture.puml
sql/: init.sql  init.sql.bkup
tests/: conftest.py  test_authentication_failures.py  test_challenge_round_file_naming.py  test_challenge_status.py  test_challenge_uid_edge_cases.py  test_compute_weights.py  test_data_model_compatibility.py  test_db_pool.py  test_early_termination_ground_truth.py  test_file_io_errors.py  test_get_weights.py  test_ground_truth_capture.py  test_local_db_manual_schema.py  test_managed_container_registry.py  test_multi_step_predictions.py  test_partial_scoring_failures.py  test_predict_engine_managed.py  test_processed_miners.py  test_processed_miners_challenge_type.py  test_runner.py  test_runner_arena_health.py  test_runner_loop_synchronization.py  test_runner_round2_health_gate.py  test_s3_manager.py  test_signer_memory.py  test_validation_submission.py
(+35 files in other folders)
